--- a/src/style/Nav.css
+++ b/src/style/Nav.css
@@ -9,7 +9,7 @@
 .Nav--Container {
   display: flex;
   align-items: center;
-  height: 6rem;
+  height: 7rem;
 }
 
 .Nav--Links {
