--- a/src/style/PageHeader.css
+++ b/src/style/PageHeader.css
@@ -51,6 +51,7 @@
   }
   .PageHeader {
     margin-top: 60px;
+    padding: 4rem 0rem 2rem 0rem;
   }
   .PageHeader--Title {
     font-size: 2.5rem;
