--- a/src/style/globalStyles.css
+++ b/src/style/globalStyles.css
@@ -288,8 +288,8 @@ blockquote {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  height: 9rem;
-  width: 9rem;
+  height: 8rem;
+  width: 8rem;
   align-items: center;
   justify-content: center;
   padding-top: 10px;
